--- a/Company.csproj
+++ b/Company.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Department\Department.csproj" />
+  </ItemGroup>
+
 </Project>
